experiment_output/error_log/nondex-pniederw-algs4partI:week1.log
warning: [options] source value 6 is obsolete and will be removed in a future release
warning: [options] target value 1.6 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task555/wd/NonDex-plugin-test/github.com/pniederw/algs4partI/week1/test/PercolationVisualizer.java:39: error: cannot find symbol
        Percolation perc = new Percolation(N);
        ^
  symbol:   class Percolation
  location: class PercolationVisualizer
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task555/wd/NonDex-plugin-test/github.com/pniederw/algs4partI/week1/test/PercolationVisualizer.java:39: error: cannot find symbol
        Percolation perc = new Percolation(N);
                               ^
  symbol:   class Percolation
  location: class PercolationVisualizer
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task555/wd/NonDex-plugin-test/github.com/pniederw/algs4partI/week1/test/InteractivePercolationVisualizer.java:38: error: cannot find symbol
        Percolation perc = new Percolation(N);
        ^
  symbol:   class Percolation
  location: class InteractivePercolationVisualizer
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task555/wd/NonDex-plugin-test/github.com/pniederw/algs4partI/week1/test/InteractivePercolationVisualizer.java:38: error: cannot find symbol
        Percolation perc = new Percolation(N);
                               ^
  symbol:   class Percolation
  location: class InteractivePercolationVisualizer
4 errors
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':week1:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2s
